--- a/comment.html
+++ b/comment.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Comment Section</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <script src="js/jquery-3.3.1.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <script src="jquery-3.3.1.js"></script>
+    <script src="bootstrap.js"></script>
 </head>
 <body>
    
